--- a/styles/style.css
+++ b/styles/style.css
@@ -148,6 +148,11 @@ h5 {
     box-shadow: 0px 10px 10px 0px rgba(255, 254, 254, 0.1);
 }
 
+.svg_circle {
+    margin-left: 25%;
+    margin-top: 4%;
+}
+
 #result {
     width: 200px;
     height: 200px;
